# Ego

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: README.md
docs/00-governance/: 提交历史规划.md  文档组织规范.md  架构师协议.md
docs/10-product/: M1-开发任务分解.md  M2-当前验收与缺口清单.md  PRD-v0.1.md  v0.1-实现优先级与里程碑.md  会话分析页指标规范-v0.1.md  信息架构-v0.1.md  全局设置与会话覆盖交互规范-v0.1.md  对话工作台布局规范-v0.1.md
docs/20-architecture/: 参数分层与配置规则-v0.1.md  可观测性规范-v0.1.md  实现基线与工程选型-v0.1.md  数据模型-v0.1.md  本地持久化与配置存储规范-v0.1.md  架构基线-v0.1.md  流式输出与失败恢复规范-v0.1.md  请求生命周期与消息流规范-v0.1.md
docs/30-decisions/: 决策记录.md
docs/90-drafts/: UI视觉与交互规范草案-v0.1.md  流式输出接入草案-v0.1.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  secrets.rs
src/app/providers/: AppBootstrap.tsx
src/app/router/: AppRouter.tsx
src/app/shell/: AppShell.tsx
src/domains/conversation/components/: ConversationWorkbenchPage.tsx
src/domains/conversation/repository/: conversationRepository.ts  mockConversationRepository.ts  tauriConversationRepository.ts
src/domains/conversation/services/: conversationService.ts
src/domains/conversation/store/: useConversationStore.ts
src/domains/observability/components/: SessionAnalyticsPage.tsx
src/domains/observability/store/: useObservabilityStore.ts
src/domains/settings/components/: GlobalSettingsPage.tsx
src/domains/settings/store/: useSettingsStore.ts
src/shared/infra/: tauri.ts
src/shared/types/: domain.ts
(+3 files in other folders)
