[package]
name = "ego"
version = "0.1.0"
description = "Ego local-first AI workbench"
authors = ["Codex"]
license = ""
repository = ""
default-run = "ego"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
futures-util = "0.3.31"
keyring = "3.6.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
time = { version = "0.3.47", features = ["formatting"] }
